# bnb-icp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
all/: CMakeLists.txt
docker/: .zsh_history  Dockerfile  README.md  docker-compose.yml
examples/: CMakeLists.txt
examples/src/: bnb_simple_example.cpp  test_lib.cpp
scripts/: build.sh  update_cmake.sh
